app/src/main/java/com/example/einkaufslisteapp/Errors/TitleFieldError.java
package com.example.einkaufslisteapp.Errors;

public interface TitleFieldError {

    boolean isTitleValid(String title);

    void toastMessage();

}
